# automated-security-response-on-aws

./: .eslintrc.yml  .gitignore  .viperlightignore  .viperlightrc  .viperlightrc_global  AWSSD-DevNotes.md  AWSSD-README.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  NOTICE.txt  README.md  SECURITY.md  buildspec.yml  compose-dev.yaml  deploy-steps.sh  deploy.sh  git-info  mypy.ini  package-lock.json  package.json  pyproject.toml  solution-manifest.yaml  sonar-project.properties  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-improvements.md  feature_request.md
.github/workflows/: build.yml  cdk-nag.yml  code-style-lint.yml  codeql.yml  deploy.yaml  run-unit-test.yml  solutions-pipeline.yml  unit-test.yml  update.yaml  viperlight.yml
bootstrap/: bootstrap.template  cdk.json  package-lock.json  package.json
bootstrap/lib/: bootstrap-stack.ts  s3bucket.ts  stack-bucket.ts  stackset-automation.ts  stackset-interface.ts
bootstrap/test/: bootstrap.test.ts
deployment/: build-open-source-dist.sh  build-s3-dist.sh  manifest.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  run-unit-tests.sh  solution_env.sh  testing_requirements.txt  upgrade_python_runtimes.py  upload-s3-dist.sh  upload_s3_dist.sh
deployment/manifest-generator/: app.js  package-lock.json  package.json
deployment/utils/: generate-controls-list.js  generate-controls-list.test.js  package-lock.json  package.json
simtest/: simulate.py
simtest/simdata/: afsbp-autoscaling.1.json  afsbp-cloudformation.1.json  afsbp-cloudfront.1.json  afsbp-cloudtrail.1.json  afsbp-cloudtrail.2.json  afsbp-cloudtrail.4.json  afsbp-cloudtrail.5.json  afsbp-codebuild.2.json  afsbp-codebuild.5.json  afsbp-config.1.json  afsbp-ec2.1.json  afsbp-ec2.15.json  afsbp-ec2.2.json  afsbp-ec2.6.json  afsbp-ec2.7.json  afsbp-ec2.8.json  afsbp-iam.3.json  (+92 more)
source/: .eslintrc.js  .npmignore  jest.config.js  jest.config.ts  package-lock.json  package.json  tsconfig.json
test-stack/: README.md  deploy-test-stack.sh
(+1270 files in other folders)
