[tool.poetry]
name = "automated_security_response_on_aws"
package-mode = false

[tool.poetry.dependencies]
aws-lambda-powertools = {extras = ["all"], version = "^3.1.0"}
python = "^3.11"

[tool.poetry.group.dev.dependencies]
python = "^3.11"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.11.2"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-env = "^1.1.5"
pytest-mock = "^3.14.0"
werkzeug = "^3.0.6"
tox = "^4.21.2"
boto3-stubs-lite = { extras = ["cloudfront", "cloudformation", "cloudwatch", "ec2", "iam", "s3", "sns", "ssm", "sts"], version = "^1.35.35" }
moto = { extras = ["cloudfront", "dynamodb", "s3"], version = "^5.0.16" }
types-urllib3 = "^1.26.25.14"
urllib3 = "^2.2.3"
aws-lambda-powertools = {extras = ["all"], version = "^3.1.0"}
aws-xray-sdk = "^2.14.0"
aws_lambda_context = "^1.1.0"
openapi_spec_validator = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

