[tool.poetry]
name = "automated_security_response_on_aws"
package-mode = false

[tool.poetry.dependencies]
aws-lambda-powertools = {extras = ["all"], version = "3.1.0"}
python = "^3.11"
boto3 = "1.40.76"

[tool.poetry.group.dev.dependencies]
python = "^3.11"
black = "24.10.0"
flake8 = "7.3.0"
isort = "5.13.2"
mypy = "1.17.1"
pytest = "8.4.1"
pytest-cov = "5.0.0"
pytest-env = "1.1.5"
pytest-mock = "3.14.1"
werkzeug = "3.1.4"
tox = "4.28.4"
boto3-stubs-lite = { extras = ["cloudfront", "cloudformation", "cloudwatch", "ec2", "iam", "s3", "sns", "ssm", "sts"], version = "^1.40.0" }
moto = { extras = ["cloudfront", "dynamodb", "s3"], version = "5.1.10" }
types-urllib3 = "1.26.25.14"
urllib3 = "2.6.0"
aws-lambda-powertools = {extras = ["all"], version = "3.1.0"}
aws_lambda_context = "1.1.0"
openapi_spec_validator = "0.7.2"
jinja2 = "3.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

